<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="180dp"
    android:minWidth="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="14dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="14dp">

    <TextView
        android:id="@+id/joinTeam_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joinGroup_info_text"
        android:maxLines="4"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/joinTeam_continue_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/joinGroup_participation_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinTeam_title" />

    <Button
        android:id="@+id/joinTeam_cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/alert_cancel"
        app:layout_constraintEnd_toStartOf="@+id/joinTeam_continue_button"
        app:layout_constraintTop_toBottomOf="@+id/joinTeam_title" />

    <ProgressBar
        android:id="@+id/joinTeam_progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTint="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>